sys/src/bindings/wasm32-wasip1.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JSClassExoticMethods"][::core::mem::size_of::<JSClassExoticMethods>() - 28usize];
    ["Alignment of JSClassExoticMethods"][::core::mem::align_of::<JSClassExoticMethods>() - 4usize];
    ["Offset of field: JSClassExoticMethods::get_own_property"]
        [::core::mem::offset_of!(JSClassExoticMethods, get_own_property) - 0usize];
    ["Offset of field: JSClassExoticMethods::get_own_property_names"]
        [::core::mem::offset_of!(JSClassExoticMethods, get_own_property_names) - 4usize];
    ["Offset of field: JSClassExoticMethods::delete_property"]
        [::core::mem::offset_of!(JSClassExoticMethods, delete_property) - 8usize];
    ["Offset of field: JSClassExoticMethods::define_own_property"]
        [::core::mem::offset_of!(JSClassExoticMethods, define_own_property) - 12usize];
    ["Offset of field: JSClassExoticMethods::has_property"]
        [::core::mem::offset_of!(JSClassExoticMethods, has_property) - 16usize];
    ["Offset of field: JSClassExoticMethods::get_property"]
        [::core::mem::offset_of!(JSClassExoticMethods, get_property) - 20usize];
    ["Offset of field: JSClassExoticMethods::set_property"]
        [::core::mem::offset_of!(JSClassExoticMethods, set_property) - 24usize];
};
pub type JSClassFinalizer =
    ::core::option::Option<unsafe extern "C" fn(rt: *mut JSRuntime, val: JSValue)>;
pub type JSClassGCMark = ::core::option::Option<
    unsafe extern "C" fn(rt: *mut JSRuntime, val: JSValue, mark_func: JS_MarkFunc),
>;
pub type JSClassCall = ::core::option::Option<
    unsafe extern "C" fn(
        ctx: *mut JSContext,
        func_obj: JSValue,
        this_val: JSValue,
        argc: ::core::ffi::c_int,
        argv: *mut JSValue,
        flags: ::core::ffi::c_int,
    ) -> JSValue,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JSClassDef {
    pub class_name: *const ::core::ffi::c_char,
    pub finalizer: JSClassFinalizer,
    pub gc_mark: JSClassGCMark,
    pub call: JSClassCall,
    pub exotic: *mut JSClassExoticMethods,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JSClassDef"][::core::mem::size_of::<JSClassDef>() - 20usize];
    ["Alignment of JSClassDef"][::core::mem::align_of::<JSClassDef>() - 4usize];
    ["Offset of field: JSClassDef::class_name"]
        [::core::mem::offset_of!(JSClassDef, class_name) - 0usize];
    ["Offset of field: JSClassDef::finalizer"]
        [::core::mem::offset_of!(JSClassDef, finalizer) - 4usize];
    ["Offset of field: JSClassDef::gc_mark"][::core::mem::offset_of!(JSClassDef, gc_mark) - 8usize];
    ["Offset of field: JSClassDef::call"][::core::mem::offset_of!(JSClassDef, call) - 12usize];
    ["Offset of field: JSClassDef::exotic"][::core::mem::offset_of!(JSClassDef, exotic) - 16usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JSEvalOptions {
    pub version: ::core::ffi::c_int,
    pub eval_flags: ::core::ffi::c_int,
    pub filename: *const ::core::ffi::c_char,
    pub line_num: ::core::ffi::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JSEvalOptions"][::core::mem::size_of::<JSEvalOptions>() - 16usize];
    ["Alignment of JSEvalOptions"][::core::mem::align_of::<JSEvalOptions>() - 4usize];
    ["Offset of field: JSEvalOptions::version"]
        [::core::mem::offset_of!(JSEvalOptions, version) - 0usize];
    ["Offset of field: JSEvalOptions::eval_flags"]
        [::core::mem::offset_of!(JSEvalOptions, eval_flags) - 4usize];
    ["Offset of field: JSEvalOptions::filename"]
        [::core::mem::offset_of!(JSEvalOptions, filename) - 8usize];
    ["Offset of field: JSEvalOptions::line_num"]
        [::core::mem::offset_of!(JSEvalOptions, line_num) - 12usize];
};
unsafe extern "C" {
    pub fn JS_NewClassID(rt: *mut JSRuntime, pclass_id: *mut JSClassID) -> JSClassID;
}
unsafe extern "C" {
    pub fn JS_GetClassID(v: JSValue) -> JSClassID;
}
unsafe extern "C" {
    pub fn JS_NewClass(
        rt: *mut JSRuntime,
        class_id: JSClassID,
        class_def: *const JSClassDef,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn JS_IsRegisteredClass(rt: *mut JSRuntime, class_id: JSClassID) -> bool;
}
unsafe extern "C" {
    pub fn JS_GetClassName(rt: *mut JSRuntime, class_id: JSClassID) -> JSAtom;
}
unsafe extern "C" {
    pub fn JS_NewNumber(ctx: *mut JSContext, d: f64) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewBigInt64(ctx: *mut JSContext, v: i64) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewBigUint64(ctx: *mut JSContext, v: u64) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_Throw(ctx: *mut JSContext, obj: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_GetException(ctx: *mut JSContext) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_HasException(ctx: *mut JSContext) -> bool;
}
unsafe extern "C" {
    pub fn JS_IsError(val: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_IsUncatchableError(val: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_SetUncatchableError(ctx: *mut JSContext, val: JSValue);
}
unsafe extern "C" {
    pub fn JS_ClearUncatchableError(ctx: *mut JSContext, val: JSValue);
}
unsafe extern "C" {
    pub fn JS_ResetUncatchableError(ctx: *mut JSContext);
}
unsafe extern "C" {
    pub fn JS_NewError(ctx: *mut JSContext) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewInternalError(
        ctx: *mut JSContext,
        fmt: *const ::core::ffi::c_char,
        ...
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewPlainError(ctx: *mut JSContext, fmt: *const ::core::ffi::c_char, ...) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewRangeError(ctx: *mut JSContext, fmt: *const ::core::ffi::c_char, ...) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewReferenceError(
        ctx: *mut JSContext,
        fmt: *const ::core::ffi::c_char,
        ...
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewSyntaxError(ctx: *mut JSContext, fmt: *const ::core::ffi::c_char, ...) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewTypeError(ctx: *mut JSContext, fmt: *const ::core::ffi::c_char, ...) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ThrowInternalError(
        ctx: *mut JSContext,
        fmt: *const ::core::ffi::c_char,
        ...
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ThrowPlainError(ctx: *mut JSContext, fmt: *const ::core::ffi::c_char, ...)
    -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ThrowRangeError(ctx: *mut JSContext, fmt: *const ::core::ffi::c_char, ...)
    -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ThrowReferenceError(
        ctx: *mut JSContext,
        fmt: *const ::core::ffi::c_char,
        ...
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ThrowSyntaxError(
        ctx: *mut JSContext,
        fmt: *const ::core::ffi::c_char,
        ...
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ThrowTypeError(ctx: *mut JSContext, fmt: *const ::core::ffi::c_char, ...) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ThrowDOMException(
        ctx: *mut JSContext,
        name: *const ::core::ffi::c_char,
        fmt: *const ::core::ffi::c_char,
        ...
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ThrowOutOfMemory(ctx: *mut JSContext) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_FreeValue(ctx: *mut JSContext, v: JSValue);
}
unsafe extern "C" {
    pub fn JS_FreeValueRT(rt: *mut JSRuntime, v: JSValue);
}
unsafe extern "C" {
    pub fn JS_DupValue(ctx: *mut JSContext, v: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_DupValueRT(rt: *mut JSRuntime, v: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ToBool(ctx: *mut JSContext, val: JSValue) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn JS_ToNumber(ctx: *mut JSContext, val: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ToInt32(ctx: *mut JSContext, pres: *mut i32, val: JSValue) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn JS_ToInt64(ctx: *mut JSContext, pres: *mut i64, val: JSValue) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn JS_ToIndex(ctx: *mut JSContext, plen: *mut u64, val: JSValue) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn JS_ToFloat64(ctx: *mut JSContext, pres: *mut f64, val: JSValue) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn JS_ToBigInt64(ctx: *mut JSContext, pres: *mut i64, val: JSValue) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn JS_ToBigUint64(ctx: *mut JSContext, pres: *mut u64, val: JSValue) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn JS_ToInt64Ext(ctx: *mut JSContext, pres: *mut i64, val: JSValue) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn JS_NewStringLen(
        ctx: *mut JSContext,
        str1: *const ::core::ffi::c_char,
        len1: size_t,
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewTwoByteString(ctx: *mut JSContext, buf: *const u16, len: size_t) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewAtomString(ctx: *mut JSContext, str_: *const ::core::ffi::c_char) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ToString(ctx: *mut JSContext, val: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ToPropertyKey(ctx: *mut JSContext, val: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ToCStringLen2(
        ctx: *mut JSContext,
        plen: *mut size_t,
        val1: JSValue,
        cesu8: bool,
    ) -> *const ::core::ffi::c_char;
}
unsafe extern "C" {
    pub fn JS_FreeCString(ctx: *mut JSContext, ptr: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn JS_NewObjectProtoClass(
        ctx: *mut JSContext,
        proto: JSValue,
        class_id: JSClassID,
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewObjectClass(ctx: *mut JSContext, class_id: JSClassID) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewObjectProto(ctx: *mut JSContext, proto: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewObject(ctx: *mut JSContext) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewObjectFrom(
        ctx: *mut JSContext,
        count: ::core::ffi::c_int,
        props: *const JSAtom,
        values: *const JSValue,
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewObjectFromStr(
        ctx: *mut JSContext,
        count: ::core::ffi::c_int,
        props: *mut *const ::core::ffi::c_char,
        values: *const JSValue,
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ToObject(ctx: *mut JSContext, val: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ToObjectString(ctx: *mut JSContext, val: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_IsFunction(ctx: *mut JSContext, val: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_IsConstructor(ctx: *mut JSContext, val: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_SetConstructorBit(ctx: *mut JSContext, func_obj: JSValue, val: bool) -> bool;
}
unsafe extern "C" {
    pub fn JS_IsRegExp(val: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_IsMap(val: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_IsSet(val: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_IsWeakRef(val: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_IsWeakSet(val: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_IsWeakMap(val: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_IsDataView(val: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_NewArray(ctx: *mut JSContext) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewArrayFrom(
        ctx: *mut JSContext,
        count: ::core::ffi::c_int,
        values: *const JSValue,
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_IsArray(val: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_IsProxy(val: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_GetProxyTarget(ctx: *mut JSContext, proxy: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_GetProxyHandler(ctx: *mut JSContext, proxy: JSValue) -> JSValue;
}
